fixed login from layout issues

--- a/src/styles/layout/_loginForm.scss
+++ b/src/styles/layout/_loginForm.scss
@@ -18,21 +18,17 @@ form {
   width: 100%;
 
   .reset-password {
-    display: block;
-    position: relative;
     cursor: pointer;
     font-size: 1.2rem;
     color: $kodi_green;
 
     span {
-      position: absolute;
-      right: 0;
+      float: right;
+      margin-bottom: 2rem;
     }
   }
 
   .login-btn {
-    position: relative;
-    top: 2.6rem;
     font-size: 1.6rem;
     font-weight: 300;
   }
