--- a/src/styles/layout/_registrationForm.scss
+++ b/src/styles/layout/_registrationForm.scss
@@ -15,11 +15,10 @@ form {
     color: $accent;
   }
 
-  .login-btn {
-    position: relative;
-    top: 2.6rem;
+  .signIn-btn {
     font-size: 1.6rem;
     font-weight: 300;
+    margin-bottom: 2rem;
   }
 
   .v-card {
